assets/css/screen.css
/* ... */
.site-nav-left-wrapper {
    position: relative;
    flex: 1 0 auto;
    display: flex;
}

.site-header-background:not(.responsive-header-img) .site-nav-left-wrapper:after,
.site-nav-main .site-nav-left-wrapper:after {
    content: "";
    position: absolute;
    top: 0;
    z-index: 1000;
    width: 40px;
    height: 100%;
}

.site-header-background:not(.responsive-header-img) .site-nav-left-wrapper:after,
.site-nav-main .site-nav-left-wrapper:after {
    right: 0;
}

.site-nav-left {
    flex: 1 0 auto;
    display: flex;
    align-items: center;
    overflow-x: auto;
    overflow-y: hidden;
    -webkit-overflow-scrolling: touch;
    margin-right: 10px;
    font-weight: 500;
    letter-spacing: 0.2px;
    white-space: nowrap;
    font-size: 16px;
    justify-content: space-between;
    font-family: 'IBM Plex Sans', Arial, sans-serif;
    -ms-overflow-scrolling: touch;
}

.nav-post-title-active .site-nav-left {
    flex: 0 0 auto;
}

.site-nav-left .nav li:last-of-type {
    padding-right: 20px;
}

/* Site Nav Hack Explanation (above):

What's happening above is .site-nav-left is set to overflow-x and allow sideways scrolling, so that when there isn't enough space for all nav items (either due to lots of nav items, or a small viewport), you can still scroll side-to-side to reach them. Also, there is a small gradient on the left and right side covering the menu so that the menu goes offscreen smoothly.

The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px of padding-bottom and a 40px fixed height parent (.site-nav) hides that entirely. Slightly hacky code. But nice clean end-result.

*/

.site-nav-logo {
    position: relative;
    z-index: 100;
    flex-shrink: 0;
    display: inline-block;
    margin-right: 32px;
    padding: 12px 0;
    color: #fff;
    font-size: 1.7rem;
    line-height: 1.8rem;
    font-weight: bold;
    letter-spacing: -0.5px;
    text-transform: none;
}

.site-nav-logo:hover {
    text-decoration: none;
}

.site-nav-logo img {
    max-width: 180px;
    display: block;
    width: auto;
    height: 16px;
}

.site-nav-content {
    position: relative;
    align-self: flex-start;
}

.nav {
    display: flex;
    margin: 0 0 0 -12px;
    padding: 0;
    list-style: none;
}

.nav li {
    display: block;
    margin: 0;
    padding: 0;
}

.nav li a {
    position: relative;
    display: block;
    padding: 12px 15px 10px;
    color: var(--primary);
    transition: opacity 0.35s ease-in-out;
}

.nav li:nth-of-type(3) a {
    color: var(--dark);
    opacity: 0.7;
}

.nav li a:hover {
    text-decoration: none;
    opacity: 1;
}

.nav li a:hover:before {
    right: 12px;
    opacity: 0.5;
}

.nav-post-title-active .nav {
    visibility: hidden;
    opacity: 0;
    transform: translateY(-175%);
}

.nav-post-title {
    visibility: hidden;
    position: absolute;
    top: 9px;
    font-size: 1.7rem;
    font-weight: 400;
    text-transform: none;
    opacity: 0;
    transition: all 1.0s cubic-bezier(0.19, 1, 0.22, 1);
}

.nav-post-title.dash {
    left: -25px;
}

.nav-post-title.dash:before {
    content: "– ";
    opacity: 0.5;
}

.nav-post-title-active .nav-post-title {
    visibility: visible;
    opacity: 1;
    transform: translateY(0);
}

.site-nav-right {
    flex: 0 1 auto;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 10px 0;
    height: 64px;
}

.site-nav-right .nav {
    position: relative;
    margin: 0;
}

.site-nav-right .nav a {
    white-space: nowrap;
}

.site-nav-right .nav a:before {
    display: none;
}

.site-nav-right .nav li:last-of-type a {
    margin-right: -12px;
}

.social-links {
    flex-shrink: 0;
    display: flex;
    align-items: center;
}

.social-link {
    display: inline-block;
    margin: 0;
    padding: 10px;
    opacity: 0.8;
}

.social-link:hover {
    opacity: 1.0;
}

.social-link svg {
    height: 1.8rem;
    fill: #fff;
}

.social-link-fb svg {
    height: 1.6rem;
}

.social-link-wb svg {
    height: 1.6rem;
}

.social-link-wb svg path {
    stroke: var(--primary);
}

.social-link-rss svg {
    height: 1.9rem;
}

.subscribe-button {
    display: block;
    padding: 0px 30px;
    height: 40px;
    border: 2px solid #1faa20;
    background-color: #1faa20;
    text-transform: uppercase;
    color: #ffffff;
    border-radius: 50px;
    font-size: 14px;
    font-weight: 700;
    line-height: 36px;
    text-align: center;
}

.subscribe-button:hover {
    text-decoration: none;
    opacity: 1;
}

.site-nav-right .nav+.subscribe-button {
    margin-left: 24px;
}

.rss-button {
    padding: 10px 8px;
    opacity: 0.8;
}

.rss-button:hover {
    opacity: 1;
}

.rss-button svg {
    margin-bottom: 1px;
    height: 2.1rem;
    fill: #fff;
}

/* Special behaviors for home navigation */

.home-template .site-main {
    padding-top: 64px !important;
}

@media (max-width: 700px) {
    .site-home-header .site-nav {
        margin-left: -5vw;
    }

    .site-nav-main {
        padding-right: 0;
        padding-left: 0;
    }

    .site-nav-left {
        margin-right: 0;
        padding-left: 5vw;
    }

    .site-nav-right {
        display: none;
    }
}


/* 6. Post Feed
/* ---------------------------------------------------------- */

.posts {
    overflow-x: hidden;
}

.post-feed {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    margin: 0 -20px;
    padding: 50px 0 0;
    background: #fff;
}

.post-card {
    position: relative;
    flex: 1 1 301px;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    margin: 0 0 40px;
    padding: 0 20px 40px;
    min-height: 220px;
    background-size: cover;
}

.post-card-image-link {
    position: relative;
    display: block;
    overflow: hidden;
    border-radius: 3px;
}

.post-card-image {
    width: 100%;
    height: 200px;
    background: var(--lightgrey) no-repeat center center;

    object-fit: cover;
}
/* ... */

